--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,6 @@
 {
-  "Street View": "Street View"
+  "Street View": "Street View",
+  "Parking Lot @OSM": "Parking Lot @OSM",
+  "Parking Lot @Street View": "Parking Lot @Street View",
+  "Submit": "Submit"
 }
