--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -1,3 +1,6 @@
 {
-  "Street View": "街景"
+  "Street View": "街景",
+  "Parking Lot @OSM": "开放街道地图上的车位",
+  "Parking Lot @Street View": "街景上的车位",
+  "Submit": "提交"
 }
