add navbar for development env

--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -1,4 +1,5 @@
 {
+  "Parking Lot Editor": "车位编辑器",
   "Street View": "街景",
   "Parking Lot @OSM": "开放街道地图上的车位",
   "Parking Lot @Street View": "街景上的车位",
