--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "Parking Lot Editor": "Parking Lot Editor",
   "Street View": "Street View",
   "Parking Lot @OSM": "Parking Lot @OSM",
   "Parking Lot @Street View": "Parking Lot @Street View",
