refine wrapper page

--- a/web/locales/en.json
+++ b/web/locales/en.json
@@ -1,5 +1,6 @@
 {
-  "parking-lot-editor": "Parking Lot Editor",
+  "parking-lot-management": "Parking Lot Management",
+  "login-button": "Login",
   "open-street-map": "Open Street Map",
   "parking-lots-mapping": "Parking Lots Mapping",
   "edit-parking-lot-osm": "Edit parking lots on open street map",
