--- a/web/locales/zh-CN.json
+++ b/web/locales/zh-CN.json
@@ -1,5 +1,6 @@
 {
-  "parking-lot-editor": "车位编辑器",
+  "parking-lot-management": "停车管理系统",
+  "login-button": "登入",
   "open-street-map": "开放街道地图",
   "parking-lots-mapping": "车位关联",
   "edit-parking-lot-osm": "编辑开放街道地图上的车位",
